# routes/api.php
@@ -152,7 +152,7 @@ Route::get('/foods/special-offers', [FoodController::class, 'specialOffers']);
 Route::get('/categories', [CategoryController::class, 'index']);
 Route::get('/restaurants/nearby', [RestaurantController::class, 'nearbyRestaurants']);
 // Food Category routes
-Route::get('/food/category', [FoodController::class, 'category']);
+Route::get('/foods/category', [FoodController::class, 'category']);
 Route::get('/foods/category/{categoryId}', [FoodController::class, 'getFoodsByCategory']);
 // Authentication
 Route::post('/register', [AuthController::class, 'register']);
